--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-1D2B-2B1<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -224,4 +224,4 @@
     }
   </script>
 </body>
-</html>9
+</html>
